cambio de index.html a español

--- a/P2/Practica/e-commerce/etienda/templates/index.html
+++ b/P2/Practica/e-commerce/etienda/templates/index.html
@@ -13,12 +13,12 @@
         <li><a href="{% url 'index' %}">Home</a></li>
         <li><a href="{% url 'get_productos' %}">Introducir Productos en la base de datos</a></li>
         <li><a href="{% url 'empty_database' %}">Borrar la Base de datos</a></li>
-        <li><a href="{% url 'find_products' 'pocket' %}">Find Products</a></li>
-        <li><a href="{% url 'find_between_price_range' 50 200 'electronics' %}">Find Electronics between $50 and $200</a></li>
-        <li><a href="{% url 'products_rating' 4 %}">Products with Rating Greater Than 4</a></li>
-        <li><a href="{% url 'mens_clothing_by_rating' %}">Men's Clothing Sorted by Rating</a></li>
-        <li><a href="{% url 'calculate_total' %}">Calculate Total Price of Products</a></li>
-        <li><a href="{% url 'calculate_by_category' %}">Calculate Revenue by Category</a></li>
+        <li><a href="{% url 'find_products' 'pocket' %}">Encontrar Productos</a></li>
+        <li><a href="{% url 'find_between_price_range' 50 200 'electronics' %}">Encontrar aparatos electronicos entre 50€ y 200€</a></li>
+        <li><a href="{% url 'products_rating' 4 %}">Productos con un Rating mayor a 4</a></li>
+        <li><a href="{% url 'mens_clothing_by_rating' %}">Ropa de Hombre ordenada por Rating</a></li>
+        <li><a href="{% url 'calculate_total' %}">Precio total de todos los productos</a></li>
+        <li><a href="{% url 'calculate_by_category' %}">Calcular por categoria</a></li>
     </ul>
 </body>
 
