--- a/P2/Practica/e-commerce/etienda/templates/base.html
+++ b/P2/Practica/e-commerce/etienda/templates/base.html
@@ -7,55 +7,55 @@
   <!-- Enlaces a los archivos de Bootstrap CSS y JS desde un CDN -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
   <style>
-    /* Estilo personalizado para el encabezado */
     .custom-header {
       background-color: #4CAF50; /* Color azulado verdoso */
       color: white;
       padding: 10px;
     }
   </style>
+
 </head>
 <body>
   <!-- Encabezado -->
+
   <div class="custom-header">
-    <div class="container">
+    <div>
       <div class="row align-items-center">
         <div class="col-12 col-md-3">
-          <h1>Store</h1> <!-- Título de la tienda -->
+            <h1>Tienda</h1> <!-- Título de la tienda -->
         </div>
         <div class="col-12 col-md-6 my-3 my-md-0">
           <!-- Formulario de búsqueda -->
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-            <button class="btn btn-success" type="submit">Buscar</button>
+          <form class="d-flex" method="GET" action="{% url 'search_results' %}">
+              <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar" name="q">
+              <button class="btn btn-success" type="submit">Buscar</button>
           </form>
         </div>
-        <div class="col-12 col-md-3 text-center text-md-end">
+        <div class="col-12 col-md-3 text-center">
           <!-- Dropdowns para categorías, órdenes y logout -->
-          <div class="dropdown d-inline mx-2">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="categoryDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-              Categorías
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="categoryDropdown">
-              <!-- Opciones de categorías aquí -->
-            </ul>
+          <div class="row">
+            <div class="col-md-auto">
+              <div class="dropdown d-inline">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="categoryDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                  Categorías
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="categoryDropdown">
+                  {% for category in categories %}
+                    <li><a class="dropdown-item" href="http://localhost:8000/etienda/category/{{ category }}/">{{ category }}</a></li>
+                  {% endfor %}
+                </ul>
+              </div>
+            </div>
           </div>
-          <div class="dropdown d-inline mx-2">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="orderDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-              Ordenar por
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="orderDropdown">
-              <!-- Opciones de órdenes aquí -->
-            </ul>
-          </div>
-          <button class="btn btn-danger">Logout</button>
         </div>
       </div>
     </div>
   </div>
+{% block content %}
+{% endblock %}
 
-  <!-- Resto del contenido de la página aquí -->
 
 </body>
 </html>
