--- a/P2/Practica/e-commerce/etienda/templates/index.html
+++ b/P2/Practica/e-commerce/etienda/templates/index.html
@@ -1,28 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+{% load static %}
 
-    <title>Home - Bootstrap instalado</title>
-</head>
+{% block content %}
 
-<body>
-    <h1>Links to Requests</h1>
-    <ul>
-        <li><a href="{% url 'index' %}">Home</a></li>
-        <li><a href="{% url 'get_productos' %}">Introducir Productos en la base de datos</a></li>
-        <li><a href="{% url 'empty_database' %}">Borrar la Base de datos</a></li>
-        <li><a href="{% url 'find_products' 'pocket' %}">Encontrar Productos</a></li>
-        <li><a href="{% url 'find_between_price_range' 50 200 'electronics' %}">Encontrar aparatos electronicos entre 50€ y 200€</a></li>
-        <li><a href="{% url 'products_rating' 4 %}">Productos con un Rating mayor a 4</a></li>
-        <li><a href="{% url 'mens_clothing_by_rating' %}">Ropa de Hombre ordenada por Rating</a></li>
-        <li><a href="{% url 'calculate_total' %}">Precio total de todos los productos</a></li>
-        <li><a href="{% url 'calculate_by_category' %}">Calcular por categoria</a></li>
-    </ul>
-</body>
 
-</html>
+<div>
+    <div class="row">
+
+      {% for category in categories %}
+      <div class="col-md-4">
+        <div class="card">
+         {% with image_path='landing_images/'|add:category|add:'.jpg' %}
+          <img src="{% static image_path %}" class="card-img-top" alt="{{ category }}">
+         {% endwith %}
+          <div class="card-body">
+            <h5 class="card-title">{{ category }}</h5>
+            <a href="http://localhost:8000/etienda/category/{{ category }}/" class="btn btn-primary">Ver Categoria</a>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+
+    </div>
+  </div>
+{% endblock%}
+
+
