practica 2.3 excepto que las imagenes no van

--- a/P2/Practica/e-commerce/etienda/templates/base.html
+++ b/P2/Practica/e-commerce/etienda/templates/base.html
@@ -50,6 +50,9 @@
             </div>
           </div>
         </div>
+        <div class="col-12 col-md-3 text-end">
+          <a href="{% url 'upload_product' %}" class="btn btn-primary">Subir Producto</a>
+        </div>
       </div>
     </div>
   </div>
