--- a/P4/Practica/e-commerce/etienda/templates/search.html
+++ b/P4/Practica/e-commerce/etienda/templates/search.html
@@ -23,6 +23,15 @@
           <h5 class="card-title">{{ result.title }}</h5>
           <h5 class="card-title">{{ result.price }}€</h5>
           <h5 class="card-title">{{ result.description }}</h5>
+
+          <div class="star-rating">
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star not_checked"></span>
+            <span class="fa fa-star not_checked"></span>
+          </div>
+
         </div>
       </div>
     </div>
