--- a/P4/Practica/frontend/src/components/SearchResultsList.css
+++ b/P4/Practica/frontend/src/components/SearchResultsList.css
@@ -1,11 +1,5 @@
-.results-list {
-  width: 100%;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  box-shadow: 0px 0px 8px #ddd;
-  border-radius: 10px;
-  margin-top: 1rem;
-  max-height: 300px;
-  overflow-y: auto;
-}
+  .card-img-top {
+    width: 300px; /* Ancho deseado */
+    height: 300px; /* Altura deseada */
+    object-fit: cover; /* Para mantener la relación de aspecto y cubrir el contenedor */
+  }
