--- a/P4/Practica/e-commerce/etienda/templates/search.html
+++ b/P4/Practica/e-commerce/etienda/templates/search.html
@@ -9,29 +9,38 @@
     height: 300px; /* Altura deseada */
     object-fit: cover; /* Para mantener la relación de aspecto y cubrir el contenedor */
   }
+
+  /* Styles for Star Rating */
+.star-rating {
+  color: #188f0a; /* Color for checked stars (e.g., gold) */
+  font-size: 24px; /* Adjust the size as needed */
+}
+
+.checked {
+  color: #188f0a;
+}
+
+.not_checked {
+  color: #ddd; /* Color for unchecked stars */
+}
+
 </style>
 
 <div>
   <div class="row">
-    {% for result in results %}
+    {% for product in products %}
     <div class="col-md-4">
       <div class="card">
-        {% with image_path=result.image|slice:'7:' %}
-        <img src="{% static image_path %}" class="card-img-top" alt="{{ result.title }}">
+
+        {% with image_path=product.image|slice:'7:' %}
+        <img src="{% static image_path %}" class="card-img-top" alt="{{ product.title }}">
         {% endwith %}
         <div class="card-body">
-          <h5 class="card-title">{{ result.title }}</h5>
-          <h5 class="card-title">{{ result.price }}€</h5>
-          <h5 class="card-title">{{ result.description }}</h5>
-
-          <div class="star-rating">
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star not_checked"></span>
-            <span class="fa fa-star not_checked"></span>
+          <h5 class="card-title">{{ product.title }}</h5>
+          <h5 class="card-title">{{ product.price }}€</h5>
+          <h5 class="card-title">{{ product.description }}</h5>
+          <div class="stars" data-product-id="{{ product.id }}" data-rating="{{ product.rating.rate }}" data-count="{{ product.rating.count }}">
           </div>
-
         </div>
       </div>
     </div>
