--- a/P4/Practica/e-commerce/etienda/templates/account/login.html
+++ b/P4/Practica/e-commerce/etienda/templates/account/login.html
@@ -6,7 +6,7 @@
 {% endblock head_title %}
 {% block content %}
     {% element h1 %}
-        {% trans "Logueate Perro" %}
+        {% trans "Log In" %}
     {% endelement %}
     <p>
         {% blocktrans %}If you have not created an account yet, then please
